--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -106,7 +106,7 @@ steps:
   - label: ":aws: Amazon_Linux 2 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/test.sh ./scripts/parallel-test.sh"
     env:
       IMAGE_TAG: "amazon_linux-2"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -118,7 +118,7 @@ steps:
   - label: ":centos: CentOS 7.6 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/test.sh ./scripts/parallel-test.sh"
     env: 
       IMAGE_TAG: "centos-7.6"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -130,7 +130,7 @@ steps:
   - label: ":ubuntu: Ubuntu 16.04 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/test.sh ./scripts/parallel-test.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -142,7 +142,7 @@ steps:
   - label: ":ubuntu: Ubuntu 18.04 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/test.sh ./scripts/parallel-test.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -154,7 +154,7 @@ steps:
   - label: ":fedora: Fedora 27 - Unit Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':fedora: Fedora 27 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
+      - "./.cicd/test.sh ./scripts/parallel-test.sh"
     env:
       IMAGE_TAG: "fedora-27"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -167,7 +167,7 @@ steps:
     command:
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/parallel-tests.sh"
+      - "cd eos && ./.cicd/test.sh ./scripts/parallel-test.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -185,7 +185,7 @@ steps:
     command:
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.13 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/parallel-tests.sh"
+      - "cd eos && ./.cicd/test.sh ./scripts/parallel-test.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -202,7 +202,7 @@ steps:
     skip: ${SKIP_HIGH_SIERRA}${SKIP_UNIT_TESTS}
 
   - label: ":pipeline: Generate Serial Test Steps"  
-    command: "./.cicd/generate-serial-tests.sh | buildkite-agent pipeline upload"
+    command: "./.cicd/generate-serial-test.sh | buildkite-agent pipeline upload"
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
@@ -211,7 +211,7 @@ steps:
   - label: ":aws: Amazon_Linux 2 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/test.sh ./scripts/long-running-test.sh"
     env:
       IMAGE_TAG: "amazon_linux-2"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -223,7 +223,7 @@ steps:
   - label: ":centos: CentOS 7.6 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/test.sh ./scripts/long-running-test.sh"
     env: 
       IMAGE_TAG: "centos-7.6"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -235,7 +235,7 @@ steps:
   - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/test.sh ./scripts/long-running-test.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -247,7 +247,7 @@ steps:
   - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/test.sh ./scripts/long-running-test.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -259,7 +259,7 @@ steps:
   - label: ":fedora: Fedora 27 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':fedora: Fedora 27 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/long-running-tests.sh"
+      - "./.cicd/test.sh ./scripts/long-running-test.sh"
     env:
       IMAGE_TAG: "fedora-27"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -272,7 +272,7 @@ steps:
     command:
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/long-running-tests.sh"
+      - "cd eos && ./.cicd/test.sh ./scripts/long-running-test.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -292,7 +292,7 @@ steps:
     command:
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.13 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/parallel-tests.sh"
+      - "cd eos && ./.cicd/test.sh ./scripts/long-running-test.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
