--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -366,7 +366,7 @@ steps:
     timeout: ${TIMEOUT:-10}
     skip: ${SKIP_UBUNTU_18}${SKIP_PACKAGE_BUILDER}
 
-  - label: ":darwin: High Sierra - Package Builder"
+  - label: ":darwin: macOS 10.13 - Package Builder"
     command:
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.13 - Build' && tar -xzf build.tar.gz"
@@ -385,7 +385,7 @@ steps:
     timeout: ${TIMEOUT:-10}
     skip: ${SKIP_MOJAVE}${SKIP_PACKAGE_BUILDER}
 
-  - label: ":darwin: Mojave - Package Builder"
+  - label: ":darwin: macOS 10.14 - Package Builder"
     command:
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
