--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -1,441 +1,8 @@
 steps:
   - wait
 
-  - label: ":aws: Amazon_Linux 2 - Build"
-    command:
-      - "./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      IMAGE_TAG: "amazon_linux-2"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-150}
-    skip: $SKIP_AMAZON_LINUX_2
-
-  - label: ":centos: CentOS 7.6 - Build"
-    command:
-      - "./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env: 
-      IMAGE_TAG: "centos-7.6"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-150}
-    skip: $SKIP_CENTOS_7
-
-  - label: ":fedora: Fedora 27 - Build"
-    command:
-      - "./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      IMAGE_TAG: "fedora-27"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-150}
-    skip: $SKIP_FEDORA_27
-
-  - label: ":ubuntu: Ubuntu 16.04 - Build"
-    command:
-      - "./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env: 
-      IMAGE_TAG: "ubuntu-16.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-150}
-    skip: $SKIP_UBUNTU_16
-
-  - label: ":ubuntu: Ubuntu 18.04 - Build"
-    command:
-      - "./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-150}
-    skip: $SKIP_UBUNTU_18
-
-  - label: ":darwin: macOS 10.13 - Build"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && ./.cicd/build.sh"
-      - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.13.6_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
-          modify-cpu: 12
-          modify-ram: 24
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-large-node-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: $SKIP_HIGH_SIERRA
-
-  - label: ":darwin: macOS 10.14 - Build"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && ./.cicd/build.sh"
-      - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
-          modify-cpu: 12
-          modify-ram: 24
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-large-node-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: $SKIP_MOJAVE
-
-  - wait
-
-  - label: ":aws: Amazon_Linux 2 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/parallel-test.sh"
-    env:
-      IMAGE_TAG: "amazon_linux-2"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_UNIT_TESTS}
-
-  - label: ":centos: CentOS 7.6 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/parallel-test.sh"
-    env: 
-      IMAGE_TAG: "centos-7.6"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: ${SKIP_CENTOS_7}${SKIP_UNIT_TESTS}
-
-  - label: ":fedora: Fedora 27 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':fedora: Fedora 27 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/parallel-test.sh"
-    env:
-      IMAGE_TAG: "fedora-27"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: ${SKIP_FEDORA_27}${SKIP_UNIT_TESTS}
-
-  - label: ":ubuntu: Ubuntu 16.04 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/parallel-test.sh"
-    env: 
-      IMAGE_TAG: "ubuntu-16.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: ${SKIP_UBUNTU_16}${SKIP_UNIT_TESTS}
-
-  - label: ":ubuntu: Ubuntu 18.04 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/parallel-test.sh"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: ${SKIP_UBUNTU_18}${SKIP_UNIT_TESTS}
-
-  - label: ":darwin: macOS 10.13 - Unit Tests"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.13 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/test.sh ./scripts/parallel-test.sh"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.13.6_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
-          modify-cpu: 12
-          modify-ram: 24
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-large-node-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: ${SKIP_HIGH_SIERRA}${SKIP_UNIT_TESTS}
-
-  - label: ":darwin: macOS 10.14 - Unit Tests"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/test.sh ./scripts/parallel-test.sh"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-node-fleet"
-    timeout: ${TIMEOUT:-60}
-    skip: ${SKIP_MOJAVE}${SKIP_UNIT_TESTS}
-
-  - label: ":pipeline: Generate Serial Test Steps"  
-    command: "./.cicd/generate-serial-tests.sh | buildkite-agent pipeline upload"
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_GENERATE_SERIAL_TESTS
-
-  - label: ":aws: Amazon_Linux 2 - Long-Running Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/long-running-test.sh"
-    env:
-      IMAGE_TAG: "amazon_linux-2"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-90}
-    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_LONG_RUNNING_TESTS:-true}
-
-  - label: ":centos: CentOS 7.6 - Long-Running Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/long-running-test.sh"
-    env: 
-      IMAGE_TAG: "centos-7.6"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-90}
-    skip: ${SKIP_CENTOS_7}${SKIP_LONG_RUNNING_TESTS:-true}
-
-  - label: ":fedora: Fedora 27 - Long-Running Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':fedora: Fedora 27 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/long-running-test.sh"
-    env:
-      IMAGE_TAG: "fedora-27"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-90}
-    skip: ${SKIP_FEDORA_27}${SKIP_LONG_RUNNING_TESTS:-true}
-
-  - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/long-running-test.sh"
-    env: 
-      IMAGE_TAG: "ubuntu-16.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-90}
-    skip: ${SKIP_UBUNTU_16}${SKIP_LONG_RUNNING_TESTS:-true}
-
-  - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/test.sh ./scripts/long-running-test.sh"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-90}
-    skip: ${SKIP_UBUNTU_18}${SKIP_LONG_RUNNING_TESTS:-true}
-
-  - label: ":darwin: macOS 10.13 - Long-Running Tests"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.13 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/test.sh ./scripts/long-running-test.sh"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.13.6_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
-          modify-cpu: 12
-          modify-ram: 24
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-large-node-fleet"
-    timeout: ${TIMEOUT:-90}
-    skip: ${SKIP_HIGH_SIERRA}${SKIP_LONG_RUNNING_TESTS:-true}
-
-  - label: ":darwin: macOS 10.14 - Long-Running Tests"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/test.sh ./scripts/long-running-test.sh"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
-          modify-cpu: 12
-          modify-ram: 24
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-large-node-fleet"
-    timeout: ${TIMEOUT:-90}
-    skip: ${SKIP_MOJAVE}${SKIP_LONG_RUNNING_TESTS:-true}
-
-  - wait:
-    continue_on_failure: true
-
-  - label: ":bar_chart: Test Metrics"
-    command: |
-      echo '+++ :compression: Extracting Test Metrics Code'
-      tar -zxf .cicd/metrics/test-metrics.tar.gz
-      echo '+++ :javascript: Running test-metrics.js'
-      node --max-old-space-size=32768 test-metrics.js
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: 10
-    soft_fail: true
-
-  - wait
-
-  - label: ":centos: CentOS 7.6 - Package Builder"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-      - "./.cicd/package.sh"
-    env:
-      IMAGE_TAG: "centos-7.6"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_CENTOS_7}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":ubuntu: Ubuntu 16.04 - Package Builder"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-      - "./.cicd/package.sh"
-    env:
-      IMAGE_TAG: "ubuntu-16.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_16}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":ubuntu: Ubuntu 18.04 - Package Builder"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-      - "./.cicd/package.sh"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_18}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":darwin: macOS 10.13 - Package Builder"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT"
-      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.13 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/package.sh"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.13.6_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-node-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_MOJAVE}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":darwin: macOS 10.14 - Package Builder"
-    command:
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT"
-      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/package.sh"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-node-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_MOJAVE}${SKIP_PACKAGE_BUILDER}
-
-  - label: ":ubuntu: Ubuntu 18.04 - Contract Builder"
-    command:
-      - "./.cicd/installation-build.sh"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_18}${SKIP_CONTRACT_BUILDER}
-
-  - wait
-
-  - label: ":git: Git Submodule Regression Check"
-    command:
-      - "./.cicd/submodule-regression-check.sh"
+  - label: ":pipeline: Generate Pipeline Steps"  
+    command: "./.cicd/generate-pipeline.sh | buildkite-agent pipeline upload"
     agents:
       queue: "automation-basic-builder-fleet"
-    timeout: 5
-
-  - label: ":beer: Brew Updater"
-    command: |
-      if [[ ${SKIP_HIGH_SIERRA:-false} != true ]]; then
-          buildkite-agent artifact download eosio.rb . --step ':darwin: macOS 10.13 - Package Builder'
-          mv eosio.rb eosio_highsierra.rb
-          buildkite-agent artifact upload eosio_highsierra.rb
-      fi
-      if [[ ${SKIP_MOJAVE:-false} != true ]]; then
-        buildkite-agent artifact download eosio.rb . --step ':darwin: macOS 10.14 - Package Builder'
-        buildkite-agent artifact upload eosio.rb
-      fi
-    agents:
-      queue: "automation-basic-builder-fleet"
-    timeout: "${TIMEOUT:-5}"
-    skip: ${SKIP_HIGH_SIERRA}${SKIP_MOJAVE}${SKIP_PACKAGE_BUILDER}
+    timeout: ${TIMEOUT:-10}
